--- a/index.html
+++ b/index.html
@@ -6,150 +6,128 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!--FA-->
 	<link rel="stylesheet" href="fontawesome/6.4.0/css/all.min.css">
-	<!--BS5-->
-	<!-- <link rel="stylesheet" href="dist/css/bootstrap.min.css">
-	<script src="dist/js/bootstrap.bundle.min.js"></script> -->	
+	<!--BS5-->	
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-
 	<!--page files-->	
-	<link rel="stylesheet" type="text/css" href="subscribe.css">
-	<script type="module" src="register_area.js"></script>
-	<!--FileSaver.js-->	
-	<script type="module" src="FileSaverModify.js"></script>
-	<!--JQuery-->
-	<script src="scripts/jquery.min.js"></script>
+	<style>
+body{
+	background: #eee;
+}
+.area-form-container{
+	background: white;
+	width: 60%;
+	margin-top: 40px;
+	margin-bottom: 40px;
+	border-radius: 15px;
+	
+}
+.area-form-container img{
+	width: 70%;
+}
+.text{
+	font-size: 1.2rem;
+}
+	</style>
 </head>
 <body>
-
-	<!--<form action="register.php" method="POST">-->
-	<!--<form action="authenticate.php" method="post">-->
 	<div class="container p-5 shadow area-form-container" style="color:gray">
 		<div class="text-center">
 			<img src="contract.png">
 		</div><br><br>	
 		<h2>Formulario de aspirante</h2>
-		<!--<legend>Area Form</legend>-->
-
-		<form class="area-form" id="area-form">			
+		<form id="gform" name="gform" enctype="text/plain" action="https://docs.google.com/forms/d/e/1FAIpQLScidBSlOJQ8yZy4ymdyWl7AKxJhWQfeG_ye7skAExg9mB6X5A/formResponse?" target="hidden_iframe" onsubmit="submitted=true;">			
 			<br>
-			<h3>Datos del aspirante</h3>
-			<p class="p">Su información personal es privada y la utilizamos estrictamente para comparar perfiles, se trata de escoger a nuestro trabajador ideal. Al final de nuestra selección toda la información que usted haya ingresado se eliminará por completo.
+			<h3><i class="fa-solid fa-user"></i> Datos del aspirante</h3>
+			<p class="text">Su información personal es privada y la utilizamos estrictamente para comparar perfiles, se trata de escoger a nuestro trabajador ideal. Al final de nuestra selección toda la información que usted haya ingresado se eliminará por completo.
 			</p>
 			<div class="row">
-				<div class="form-group col-sm-8">
-					<label class="form-label" for="area_name">Nombre: </label>
-					<input class="form-control col-sm-2" type="text" id="area_name">
+				<div class="form-group col-sm-6">
+					<label class="form-label text" for="entry.1201899781">Nombre: </label>
+					<input class="form-control" type="text" id="entry.1201899781" name="entry.1201899781">
 				</div>
-				<br>
-				<div class="form-group col-sm-4">
-					<label class="form-label col-sm-2" for="area_number">Edad: </label>
-					<input class="form-control" type="text" id="area_number">
+				<div class="form-group col-sm-3">
+					<label class="form-label text" for="entry.1528768236">Edad: </label>
+					<input class="form-control" type="text" id="entry.1528768236" name="entry.1528768236">
+				</div>
+				<div class="form-group col-sm-3">
+					<label class="form-label text" for="entry.955391074">Grado escolar: </label>
+					<input class="form-control" type="text" id="entry.955391074" name="entry.955391074">
 				</div>
 			</div>
 			<div class="row">
 				<br>
 				<div class="form-group">
-					<label class="form-label" for="area_name">Dirección: </label>
-					<input class="form-control col-sm-2" type="text" id="area_name">
+					<label class="form-label text" for="entry.1405386051">Dirección: </label>
+					<input class="form-control" type="text" id="entry.1405386051" name="entry.1405386051">
 				</div>
 			</div>			
 			<br>
-			<p class="text-danger"><strong>Atención: </strong> Ingrese valores reales pues de ser aprobado, deberá presentarse con su carnet de identidad.</p>
-			<div class="row">
-				<div class="form-group col-sm-4">
-					<label class="form-label" for="area_name">Estudios cursados: </label>
-					<input class="form-control col-sm-2" type="text" id="area_name">
-				</div>
-				<div class="form-group col-sm-4">
-					<label class="form-label" for="area_name">Grado escolar: </label>
-					<input class="form-control col-sm-2" type="text" id="area_name">
-				</div>
-				<br>				
-			</div>
-			<br>
+			<p class="text-danger text"><strong>Atención: </strong> Ingrese valores reales pues de ser aprobado, deberá presentarse con su carnet de identidad.</p>
 			<div class="form-group">
 				<div class="row">
 					<div class="form-group col-sm-8">
-						<label class="form-label">Qué experiencia de trabajo tiene en computadoras: </label>
+						<label class="form-label text">¿Qué experiencia de trabajo tiene en computadoras? </label>
 						<br>
-						<label><input type="checkbox" id="chbx_plc"> Al menos seis meses</label><br>
-						<label><input type="checkbox" id="chbx_regulator"> Poco más de un año</label><br>
-						<label><input type="checkbox" id="chbx_contactlogic"> Más de tres años</label><br>
-						<label><input type="checkbox" id="chbx_eros"> Toda la vida he trabajado en computadoras</label><br>
+						<label class="text"><input type="radio" id="entry.753601323" name="entry.753601323" value="Ninguna, quiero empezar" /> Ninguna, quiero empezar</label><br>
+						<label class="text"><input type="radio" id="entry.753601323" name="entry.753601323" value="Al menos seis meses" /> Al menos seis meses</label><br>
+						<label class="text"><input type="radio" id="entry.753601323" name="entry.753601323" value="Poco más de un año" /> Poco más de un año</label><br>
+						<label class="text"><input type="radio" id="entry.753601323" name="entry.753601323" value="Más de tres años" /> Más de tres años</label><br>
+						<label class="text"><input type="radio" id="entry.753601323" name="entry.753601323" value="Toda la vida he trabajado en computadoras" /> Toda la vida he trabajado en computadoras</label><br>
 					</div>
 					<div class="form-group col-sm-4">
-						<label class="form-label">Autoevaluación: </label>
+						<label class="form-label text">Autoevaluación: </label>
 						<br>
-						<label><input type="checkbox" id="chbx_plc"> Soy un principiante</label><br>
-						<label><input type="checkbox" id="chbx_regulator"> Conozco del tema</label><br>
-						<label><input type="checkbox" id="chbx_contactlogic"> Bastante hábil</label><br>
-						<label><input type="checkbox" id="chbx_eros"> Experto</label><br>					
+						<label class="text"><input type="radio" id="entry.1117891961" name="entry.1117891961" value="Soy un principiante"> Soy un principiante</label><br>
+						<label class="text"><input type="radio" id="entry.1117891961" name="entry.1117891961" value="Conozco del tema"> Conozco del tema</label><br>
+						<label class="text"><input type="radio" id="entry.1117891961" name="entry.1117891961" value="Bastante hábil"> Bastante hábil</label><br>
+						<label class="text"><input type="radio" id="entry.1117891961" name="entry.1117891961" value="Experto"> Experto</label><br>					
 					</div>
 			</div>
 			<br>
 			<div class="form-group">	
-			<h3>Habilidades</h3>	
-			<p>De las siguientes habilidades, marque las que ud considera que posee trabajando en una PC:</p>
-			<p class="text-danger"><strong>Atención: </strong> No debe preocuparse si no selecciona ninguna, pues este punto no afecta para su aprobación. Es solo interés del administrador.</p>
+				<h3><i class="fa-solid fa-football"></i> Habilidades</h3>	
+				<p class="text">De las siguientes habilidades, marque las que ud considera que posee trabajando en una PC:</p>
 				<div class="row">
 					<div class="col-sm-7">						
-						<label><input type="checkbox" id="chbx_plc"> Conversión de video y audio</label><br>
-						<label><input type="checkbox" id="chbx_regulator"> Edición de imágenes / Trabajo con Photoshow (u otros)</label><br>
-						<label><input type="checkbox" id="chbx_eros"> Actualización de antivirus</label><br>							
-						<label><input type="checkbox" id="chbx_contactlogic"> Instalación de software</label><br>
+						<label class="text"><input type="checkbox" id="entry.482992573"> Conversión de video y audio</label><br>
+						<label class="text"><input type="checkbox" id="entry.482992573"> Edición de imágenes / Trabajo con Photoshow (u otros)</label><br>
+						<label class="text"><input type="checkbox" id="entry.482992573"> Actualización de antivirus</label><br>							
+						<label class="text"><input type="checkbox" id="entry.482992573"> Instalación de software</label><br>
 					</div>
 					<div class="col-sm-5">
-						<label><input type="checkbox" id="chbx_eros"> Instalación de sistemas operativos</label><br>
-						<label><input type="checkbox" id="chbx_private"> Programación</label><br>	
-						<label><input type="checkbox" id="chbx_noscd"> Diseño web</label><br>
-						<label><input type="checkbox" id="chbx_contactlogic"> Videojuegos</label><br>					
+						<label class="text"><input type="checkbox" id="entry.482992573"> Instalación de sistemas operativos</label><br>
+						<label class="text"><input type="checkbox" id="entry.482992573"> Programación</label><br>	
+						<label class="text"><input type="checkbox" id="entry.482992573"> Diseño web</label><br>
+						<label class="text"><input type="checkbox" id="entry.482992573"> Videojuegos</label><br>					
 					</div>	
-				</div>	
-			</div>
-			<br>
-
-			<div class="form-group">
-				<h3>Opinión personal</h3>
-				<p>Exprese su opinión (aunque sea breve) acerca de esta oferta de trabajo y (o) su interés por la misma: </p>
-				<!--cols-->
-				<textarea class="form-control" id="description" rows="5"></textarea>
-			</div>
-			<hr class="featurette divider">
-			<br>
-
-			<div id="sendmsg" class="send-msg text-white bg-success d-flex justify-content-center">
-				<p class="align-self-baseline">Su información ha sido enviada exitosamente.</p>
-				<div class="fa-2x">
-				<i class="fas fa-check"></i>	
 				</div>
-				<p class="align-self-baseline"></p>			
+				<br>
+				<p class="text-danger text"><strong>Atención: </strong> No debe preocuparse si no selecciona ninguna, pues este punto no afecta para su aprobación. Es solo interés del administrador.</p>
 			</div>
+			<br>
+			<div class="form-group">
+				<h3><i class="fa-solid fa-comments"></i> Opinión personal</h3>
+				<p class="text">Exprese su opinión (aunque sea breve) acerca de esta oferta de trabajo y (o) su interés por la misma: </p>
+				<textarea class="form-control" id="entry.1223670467" name="entry.1223670467" rows="5"></textarea>
+			</div>
+			<br>
 
-			<div class="row">
-				<div class="form-group col-sm-6">									
-					<!--<input type="checkbox" id="loop_yes">
-					<h6>Have some extra data? <a class="col-sm-5">Enter more data...</a></h6>-->				
-				</div>		
-				<div class="form-group col-sm-6 text-end">
+			<div class="row">	
+				<div class="form-group text-center">
 					<input type="submit" id="submit_btn" value="Enviar" class="submit btn btn-primary text-white" data-bs-toggle="modal" data-bs-target="#myModal"><br>				
 				</div>
 			</div>				
 
-			<!-- <button type="button" class="btn btn-primary" >	Open modal</button> -->
-
 			<div class="modal" id="myModal">
 				<div class="modal-dialog">
-				 	<div class="modal-content">			  
-
+				 	<div class="modal-content">	
 						<div class="modal-header">
-						<h4 class="modal-title">Formulario registrado correctamente</h4>
-						<button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-						</div>			  
-
+							<h4 class="modal-title">Formulario registrado correctamente</h4>
+							<button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+						</div>
 						<div class="modal-body">
-							Muchas gracias, [name] 
-							Se le contactará a su cuenta de Facebook o al privado en Messenger para hacerle saber nuestro interés por usted.			
+							<p class="text">Muchas gracias, se le contactará a su cuenta de Facebook o al privado en Messenger para hacerle saber nuestro interés por ud.</p>			
 						</div>			  
 						<div class="modal-footer">
 						<button type="button" class="btn btn-success" data-bs-dismiss="modal">Salir</button>
@@ -158,17 +136,8 @@
 				</div>
 			</div>
 			<br><br>
-
-			<!--<p>
-				Gender:
-				<label><input type="radio" name="gender"
-					value="male" /> Male</label>
-				<label><input type="radio" name="gender"
-					value="female" /> Female</label>
-			</p>
-			<input type="range" name="">-->
-			<!--<i class="fab fa-youtube"></i>-->
 		</form>
+		<iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted) {}"></iframe>
 	</div>
 </body>
 </html>
