--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ body{
 			<img src="contract.png">
 		</div><br><br>	
 		<h2>Formulario de aspirante</h2>
-		<form id="gform" name="gform" enctype="text/plain" action="https://docs.google.com/forms/d/1IJm6Omyedo6pVL8YLc5RG18k6RVttOiJ0LhzdpIOz9A/formResponse?" target="hidden_iframe" onsubmit="submitted=true;">			
+		<form id="gform" name="gform" action="https://docs.google.com/forms/d/1IJm6Omyedo6pVL8YLc5RG18k6RVttOiJ0LhzdpIOz9A/formResponse?">			
 			<br>
 			<h3><i class="fa-solid fa-user"></i> Datos del aspirante</h3>
 			<p class="text">Su información personal es privada y la utilizamos estrictamente para comparar perfiles, se trata de escoger a nuestro trabajador ideal. Al final de nuestra selección toda la información que usted haya ingresado se eliminará por completo.
@@ -137,7 +137,7 @@ body{
 			</div>
 			<br><br>
 		</form>
-		<iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted) {}"></iframe>
+		<!-- <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted) {}"></iframe> -->
 	</div>
 </body>
 </html>
