--- a/index.html
+++ b/index.html
@@ -90,16 +90,16 @@ body{
 				<p class="text">De las siguientes habilidades, marque las que ud considera que posee trabajando en una PC:</p>
 				<div class="row">
 					<div class="col-sm-7">						
-						<label class="text"><input type="checkbox" id="entry.482992573"> Conversión de video y audio</label><br>
-						<label class="text"><input type="checkbox" id="entry.482992573"> Edición de imágenes / Trabajo con Photoshow (u otros)</label><br>
-						<label class="text"><input type="checkbox" id="entry.482992573"> Actualización de antivirus</label><br>							
-						<label class="text"><input type="checkbox" id="entry.482992573"> Instalación de software</label><br>
+						<label class="text"><input type="checkbox" id="entry.482992573" name="entry.482992573"> Conversión de video y audio</label><br>
+						<label class="text"><input type="checkbox" id="entry.482992573" name="entry.482992573"> Edición de imágenes / Trabajo con Photoshow (u otros)</label><br>
+						<label class="text"><input type="checkbox" id="entry.482992573" name="entry.482992573"> Actualización de antivirus</label><br>							
+						<label class="text"><input type="checkbox" id="entry.482992573" name="entry.482992573"> Instalación de software</label><br>
 					</div>
 					<div class="col-sm-5">
-						<label class="text"><input type="checkbox" id="entry.482992573"> Instalación de sistemas operativos</label><br>
-						<label class="text"><input type="checkbox" id="entry.482992573"> Programación</label><br>	
-						<label class="text"><input type="checkbox" id="entry.482992573"> Diseño web</label><br>
-						<label class="text"><input type="checkbox" id="entry.482992573"> Videojuegos</label><br>					
+						<label class="text"><input type="checkbox" id="entry.482992573" name="entry.482992573"> Instalación de sistemas operativos</label><br>
+						<label class="text"><input type="checkbox" id="entry.482992573" name="entry.482992573"> Programación</label><br>	
+						<label class="text"><input type="checkbox" id="entry.482992573" name="entry.482992573"> Diseño web</label><br>
+						<label class="text"><input type="checkbox" id="entry.482992573" name="entry.482992573"> Videojuegos</label><br>					
 					</div>	
 				</div>
 				<br>
