--- a/index.html
+++ b/index.html
@@ -115,26 +115,10 @@ body{
 
 			<div class="row">	
 				<div class="form-group text-center">
-					<input type="submit" id="submit_btn" value="Enviar" class="submit btn btn-primary text-white" data-bs-toggle="modal" data-bs-target="#myModal"><br>				
+					<input type="submit" id="submit_btn" value="Enviar" class="submit btn btn-primary text-white"><br>				
 				</div>
 			</div>				
 
-			<div class="modal" id="myModal">
-				<div class="modal-dialog">
-				 	<div class="modal-content">	
-						<div class="modal-header">
-							<h4 class="modal-title">Formulario registrado correctamente</h4>
-							<button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-						</div>
-						<div class="modal-body">
-							<p class="text">Muchas gracias, se le contactará a su cuenta de Facebook o al privado en Messenger para hacerle saber nuestro interés por ud.</p>			
-						</div>			  
-						<div class="modal-footer">
-						<button type="button" class="btn btn-success" data-bs-dismiss="modal">Salir</button>
-						</div>			  
-				  	</div>
-				</div>
-			</div>
 			<br><br>
 		</form>
 		<iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted) {}"></iframe>
