--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ body{
 			<img src="contract.png">
 		</div><br><br>	
 		<h2>Formulario de aspirante</h2>
-		<form id="gform" name="gform" action="https://docs.google.com/forms/d/1IJm6Omyedo6pVL8YLc5RG18k6RVttOiJ0LhzdpIOz9A/formResponse?" target="hidden_iframe" onsubmit="submitted=true;">			
+		<form id="gform" name="gform" action="https://docs.google.com/forms/d/1IJm6Omyedo6pVL8YLc5RG18k6RVttOiJ0LhzdpIOz9A/formResponse" target="hidden_iframe" onsubmit="submitted=true;">			
 			<br>
 			<h3><i class="fa-solid fa-user"></i> Datos del aspirante</h3>
 			<p class="text">Su información personal es privada y la utilizamos estrictamente para comparar perfiles, se trata de escoger a nuestro trabajador ideal. Al final de nuestra selección toda la información que usted haya ingresado se eliminará por completo.
@@ -115,10 +115,26 @@ body{
 
 			<div class="row">	
 				<div class="form-group text-center">
-					<input type="submit" id="submit_btn" value="Enviar" class="submit btn btn-primary text-white"><br>				
+					<input type="submit" id="submit_btn" value="Enviar" class="submit btn btn-primary text-white" data-bs-toggle="modal" data-bs-target="#myModal"><br>				
 				</div>
 			</div>				
 
+			<div class="modal" id="myModal">
+				<div class="modal-dialog">
+				 	<div class="modal-content">	
+						<div class="modal-header">
+							<h4 class="modal-title">Formulario registrado correctamente</h4>
+							<button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+						</div>
+						<div class="modal-body">
+							<p class="text">Muchas gracias, se le contactará a su cuenta de Facebook o al privado en Messenger para hacerle saber nuestro interés por ud.</p>			
+						</div>			  
+						<div class="modal-footer">
+						<button type="button" class="btn btn-success" data-bs-dismiss="modal">Salir</button>
+						</div>			  
+				  	</div>
+				</div>
+			</div>
 			<br><br>
 		</form>
 		<iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted) {}"></iframe>
